--- a/scss/atoms/mixins/_responsive.scss
+++ b/scss/atoms/mixins/_responsive.scss
@@ -14,7 +14,9 @@ $breakpoints:(
     phone: 320px,
     phablet: 500px,
     tablet: 768px,
+    narrow-desktop: 800px,
     desktop: 960px,
+    wide-desktop: 1200px,
     billboard: 10000px
 );
 
