--- a/scss/atoms/_metrics.scss
+++ b/scss/atoms/_metrics.scss
@@ -6,16 +6,21 @@
 
 // Variables
 
-$sidebar-width: 17.942em;
-$header-height: 7.594em;
+$sidebar-width: 17.713em;
 
+$header-height: 7.478em;
 $masterbar-height: 2.625em; //47.250px on the modular scale
 
 
+$horizontal-linelenght: 34.444em;
+$horizontal-padding: 8.184em;
+
+$vertical-margin: 1.777em;
+$vertical-margindouble: 3.157em;
 
 // Extends
 
 %negative-margins {
-	margin: auto -7.594em;
-	padding: 1.75em 7.594em;
+	margin: auto $horizontal-padding * -1;
+	padding: $vertical-margin $horizontal-padding;
 }
