--- a/scss/templates/_layout.scss
+++ b/scss/templates/_layout.scss
@@ -9,13 +9,30 @@
 
 body {
 	margin: 0;
+	@include breakpoint(phablet) {
+		font-size: 100%; //go down to 16px
+	}
 }
 
 .site-content {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	//padding-top: $masterbar-height;
+}
+
+.site-header {
+	display: block;
+	position: fixed;
+		left: 0.519em;
+		top: 1.5em;
+	width: $sidebar-width - ( 0.519em * 2 );
+	z-index: 9998;
+	@include breakpoint(narrow-desktop) {
+		position: static;
+		top: 0;
+		left: 0;
+		width: 100%;
+	}
 }
 
 .main-navigation {
@@ -23,41 +40,60 @@ body {
 		top: 0;
 		left: 0;
 	width: $sidebar-width;
-	padding-top: $header-height + 1.75em;
-	overflow: auto;
+	padding-top: $header-height + 1.945em;
+	overflow-y: scroll;
 	min-height: 100%;
 	background: $wordpress-blue;
 	box-shadow: inset -0.296em 0 0 rgba($dark-blue, 0.2);
 	z-index: 200;
+	@include breakpoint(narrow-desktop) {
+		display: none; 
+		// This obviously needs some more thought.
+		// Did this for quick test of layout on small device.
+	}
 }
 
 .site-main {
 	margin-left: $sidebar-width;
 	background: $ultra-light-gray;
 	min-height: 100%;
+	@include breakpoint(narrow-desktop) {
+		margin-left: auto;
+	}
 }
 
 .page, 
 .page-links {
-	padding: 1.75em 8.859em;
-	max-width: 52em; 
+	max-width: $horizontal-linelenght + ($horizontal-padding*2); 
+	padding: $vertical-margin $horizontal-padding;
 	margin: auto;
+	@include breakpoint(wide-desktop) {
+		max-width: $horizontal-linelenght;
+		padding: $vertical-margin;
+	}
 }
 
 .page {
 	.page-header {
 		@extend %negative-margins;
-		margin-bottom: 2.25em;
-		padding-bottom: 3.375em;
-		border-bottom: 5px solid rgba($medium-gray,.5);
+
+		margin-bottom: $vertical-margindouble;
+		padding-bottom: $vertical-margindouble;
+		border-bottom: 1px solid rgba($medium-gray,.5);
 		h1, p {
 			margin: 0;
 		}
 	}
 	.wide {
-		@extend %negative-margins;		
+		@extend %negative-margins;
+		margin-top: $vertical-margindouble;
+		margin-bottom: $vertical-margindouble;
+
 		background: white;
 		border-radius: 3px;
 		box-shadow: 0 1px 2px $light-gray;
+	}
+	p {
+		margin: $vertical-margin 0;
 	}
 }
