--- a/css/style.css
+++ b/css/style.css
@@ -2324,6 +2324,14 @@ body {
 .page .page-header h1, .page .page-header p {
   margin: 0;
 }
+@media (max-width: 1200px) {
+  .page .page-header {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 .page .wide {
   margin-top: 3.157em;
   margin-bottom: 3.157em;
@@ -2332,8 +2340,382 @@ body {
   -webkit-box-shadow: 0 1px 2px #e8f0f5;
   box-shadow: 0 1px 2px #e8f0f5;
 }
+@media (max-width: 1200px) {
+  .page .wide {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .page p {
   margin: 1.777em 0;
+}
+
+.wpcom-blue {
+  background-color: #0085be;
+}
+
+.light-blue {
+  background-color: #78dcfa;
+}
+
+.medium-blue {
+  background-color: #00aadc;
+}
+
+.dark-blue {
+  background-color: #005082;
+}
+
+.ultra-light-gray {
+  background-color: #f4f8fa;
+}
+
+.light-gray {
+  background-color: #e8f0f5;
+}
+
+.medium-gray {
+  background-color: #d2dee6;
+}
+
+.dark-gray {
+  background-color: #324155;
+}
+
+.fire-orange {
+  background-color: #f0821e;
+}
+
+.jazzy-orange {
+  background-color: #d54e21;
+}
+
+.valid-green {
+  background-color: #4cb420;
+}
+
+.warning-yellow {
+  background-color: #ffba00;
+}
+
+.error-red {
+  background-color: #dd3d36;
+}
+
+/* Library Header */
+.library-header {
+  background: #0085be;
+  color: #fff;
+  padding: 100px 0 50px 0;
+  font-size: 1em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.library-header h1 {
+  padding: 0 50px;
+  color: #fff;
+  font-size: 4em;
+  font-weight: 300;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 780px) {
+  .library-header h1 {
+    font-size: 3em;
+  }
+}
+.library-header p {
+  padding: 0 50px;
+  font-size: 1em;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 1.5;
+  opacity: 0.8;
+}
+
+/* Library Table of Contents */
+.library-contents {
+  background: #324155;
+}
+.library-contents ul {
+  padding: 0 30px;
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.library-contents a:hover {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+/* Design and Code Samples */
+.sample {
+  padding: 20px;
+  margin: 0 -20px;
+}
+.sample article {
+  background: #fff;
+  border: 2px solid rgba(0, 80, 130, 0.4);
+}
+.sample pre {
+  border-radius: 0;
+  margin: 0;
+  padding: 30px 40px;
+  max-height: 100%;
+  overflow: auto;
+  border: none;
+}
+
+#typesetting-sample {
+  font-famiy: "Open Sans", helvetica, arial, sans-serif;
+  padding: 40px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+#typesetting-sample h1 {
+  font-family: "Merriweather", georgia, serif;
+  font-size: 2.291em;
+  font-weight: 700;
+  line-height: 1.258;
+  margin: 0 0 15px 0;
+}
+#typesetting-sample h4 {
+  font-weight: 700;
+  font-size: 0.875em;
+  line-height: 1.618;
+  text-transform: uppercase;
+  letter-spacing: 0.079em;
+  margin: 0 0 15px 0;
+  color: #b3c1d3;
+}
+#typesetting-sample h4 a {
+  color: #738cad;
+}
+#typesetting-sample h4 a:hover {
+  color: #f0821e;
+}
+#typesetting-sample p {
+  margin: 0;
+  fong-weight: 400;
+  font-size: 1em;
+  line-height: 1.618;
+}
+
+.pattern {
+  padding: 15px 0 25px 0;
+  color: rgba(0, 0, 0, 0.6);
+  line-height: 1.7;
+}
+.pattern:first-child {
+  padding-top: 0;
+}
+.pattern:last-child {
+  border: none;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+.pattern h3 {
+  margin: 0 20px 0 0;
+  font-family: "Open Sans", helvetica, arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.4em;
+  line-height: 1.618;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+/* Color Swatch */
+.swatches {
+  padding: 2% 0;
+  margin: 0 -2%;
+}
+.swatches:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.swatches .swatch {
+  width: 100%;
+  height: 300px;
+  position: relative;
+  float: left;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 20px 0;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05);
+}
+.swatches .swatch ul {
+  position: absolute;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+  background: rgba(255, 255, 255, 0.95);
+  margin: 0;
+  padding: 20px;
+  -webkit-box-shadow: 0 -10px 0 rgba(0, 0, 0, 0.025);
+  box-shadow: 0 -10px 0 rgba(0, 0, 0, 0.025);
+  font-size: 0.8rem;
+  list-style: none;
+}
+.swatches .swatch li {
+  padding: 3px 0;
+  line-height: 1;
+  font-family: monospace;
+  color: rgba(0, 0, 0, 0.6);
+}
+.swatches .swatch strong {
+  font-size: 1rem;
+  display: block;
+  margin-bottom: 8px;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  color: rgba(0, 0, 0, 0.8);
+}
+.swatches .swatch small {
+  font-size: 0.6rem;
+  opacity: 0.7;
+  display: block;
+  margin-top: -8px;
+  margin-bottom: 8px;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+}
+.swatches .swatch .type-demo {
+  line-height: 200px;
+  width: 100%;
+  text-align: center;
+}
+.swatches .swatch.open-sans-300 .type-demo {
+  font-family: 'Open Sans', arial, verdana, sans-serif;
+  font-weight: 300;
+  font-size: 100px;
+}
+.swatches .swatch.open-sans-500 .type-demo {
+  font-family: 'Open Sans', arial, verdana, sans-serif;
+  font-weight: 500;
+  font-size: 100px;
+}
+.swatches .swatch.open-sans-title .type-demo {
+  font-family: 'Open Sans', arial, verdana, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+.swatches .swatch.merriweather-700 .type-demo {
+  font-family: 'Merriweather';
+  font-weight: 700;
+  font-size: 100px;
+}
+.swatches .swatch.merriweather-900 .type-demo {
+  font-family: 'Merriweather';
+  font-weight: 900;
+  font-size: 100px;
+}
+@media screen and (min-width: 800px) {
+  .swatches .swatch {
+    margin: 0 1%;
+  }
+  .swatches.col-1 .swatch {
+    width: 96%;
+  }
+  .swatches.col-2 .swatch {
+    width: 48%;
+  }
+  .swatches.col-3 .swatch {
+    width: 31.33%;
+  }
+  .swatches.col-4 .swatch {
+    width: 23%;
+  }
+}
+
+/* Type Swatch */
+/* Syntax Highlighter (rainbow.js) Styles */
+/* Modified version of the "GitHub theme," by Craig Campbell (v1.0.4) */
+pre {
+  border: 1px solid #ccc;
+  word-wrap: break-word;
+  padding: 16px 20px;
+  line-height: 19px;
+  margin-bottom: 20px;
+}
+
+code {
+  border: 1px solid #eaeaea;
+  margin: 0px 2px;
+  padding: 0px 5px;
+  font-size: 13px;
+}
+
+pre code {
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+  border-radius: 0px;
+}
+
+pre, code {
+  font-family: 'Source Code Pro', Consolas, 'Liberation Mono', Courier, monospace;
+  color: #333;
+  font-weight: 300;
+  background: #f4f8fa;
+  border-radius: 3px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+pre, pre code {
+  font-size: 14px;
+}
+
+pre .comment {
+  color: #998;
+}
+
+pre .support {
+  color: #0086B3;
+}
+
+pre .tag, pre .tag-name {
+  color: #005082;
+  font-weight: 600;
+}
+
+pre .keyword, pre .css-property, pre .vendor-prefix, pre .sass, pre .class, pre .id, pre .css-value, pre .entity.function, pre .storage.function {
+  font-weight: 500;
+}
+
+pre .css-property, pre .css-value, pre .vendor-prefix, pre .support.namespace {
+  color: #324155;
+}
+
+pre .constant.numeric, pre .keyword.unit, pre .hex-color {
+  font-weight: normal;
+  color: #00aadc;
+}
+
+pre .entity.class {
+  color: #458;
+}
+
+pre .entity.id, pre .entity.function {
+  color: #900;
+}
+
+pre .attribute, pre .variable {
+  color: #00aadc;
+}
+
+pre .string, pre .support.value {
+  font-weight: normal;
+  color: #f0821e;
+}
+
+pre .regexp {
+  color: #009926;
 }
 
 .ir {
