--- a/scss/atoms/_metrics.scss
+++ b/scss/atoms/_metrics.scss
@@ -22,5 +22,5 @@ $vertical-margindouble: 3.157em;
 
 %negative-margins {
 	margin: auto $horizontal-padding * -1;
-	padding: $vertical-margin $horizontal-padding;
+	padding: 0;
 }
