--- a/scss/atoms/colors/_colors.scss
+++ b/scss/atoms/colors/_colors.scss
@@ -22,8 +22,8 @@ $text-gray:              lighten($dark-gray, 40%);
 $white:                  #ffffff;
 
 // Oranges
-$fire-orange:            #f0821e;
-$jazzy-orange:           #d54e21;
+$fire-orange:            #d54e21;
+$jazzy-orange:           #f0821e;
 
 // Alerts
 $alert-yellow:           #ffba00;
