--- a/css/style.css
+++ b/css/style.css
@@ -2297,7 +2297,7 @@ body {
   left: 0;
   width: 17.713em;
   padding-top: 15.233em;
-  overflow-y: scroll;
+  overflow: auto;
   min-height: 100%;
   background: #0085be;
   -webkit-box-shadow: inset -0.296em 0 0 rgba(0, 80, 130, 0.2);
@@ -2408,11 +2408,11 @@ body {
 }
 
 .fire-orange {
-  background-color: #f0821e;
+  background-color: #d54e21;
 }
 
 .jazzy-orange {
-  background-color: #d54e21;
+  background-color: #f0821e;
 }
 
 .valid-green {
@@ -2539,7 +2539,7 @@ body {
   color: #738cad;
 }
 #typesetting-sample h4 a:hover {
-  color: #f0821e;
+  color: #d54e21;
 }
 #typesetting-sample p {
   margin: 0;
@@ -2711,7 +2711,7 @@ pre .attribute, pre .variable {
 
 pre .string, pre .support.value {
   font-weight: normal;
-  color: #f0821e;
+  color: #d54e21;
 }
 
 pre .regexp {
