--- a/scss/atoms/_base.scss
+++ b/scss/atoms/_base.scss
@@ -7,7 +7,7 @@ button,
 input,
 select,
 textarea {
-	color: rgba($dark-gray,.85);
+	color: $text-gray;
 }
 html,
 body {
@@ -20,6 +20,7 @@ body {
 	color: #fff;
 	text-shadow: none;
 }
+
 
 
 // ==========================================================================
