--- a/scss/atoms/colors/_colors.scss
+++ b/scss/atoms/colors/_colors.scss
@@ -15,10 +15,14 @@ $ultra-light-light-gray: lighten($ultra-light-gray, 2%);
 $medium-gray-light:      lighten($medium-gray, 30%);
 $medium-gray-dark:       darken($medium-gray, 30%);
 $dark-gray-light:        lighten($dark-gray, 5%);
-$ultra-dark-gray: 	 	 rgb(30, 45, 65);
+$ultra-dark-gray: 	 	   rgb(30, 45, 65);
+
+$medium-gray-darker:     darken($medium-gray, 10%);
+$medium-gray-darkerer:   darken($medium-gray, 20%);
 
 $groups-bg:              lighten($light-blue, 30%);
-$text-gray:              lighten($dark-gray, 40%);
+$text-gray:              lighten($dark-gray, 10%);
+
 $white:                  #ffffff;
 
 // Oranges
@@ -26,9 +30,9 @@ $fire-orange:            #d54e21;
 $jazzy-orange:           #f0821e;
 
 // Alerts
-$alert-yellow:           #ffba00;
-$alert-red:              #dd3d36;
-$alert-green:            #4cb420;
+$alert-yellow:           #f0b746;
+$alert-red:              #d9534f;
+$alert-green:            #4ab85e;
 
 // Link hovers
 $link-highlight:         tint($medium-blue, 20%);
