--- a/scss/templates/_layout.scss
+++ b/scss/templates/_layout.scss
@@ -47,7 +47,7 @@ body {
 	box-shadow: inset -0.296em 0 0 rgba($dark-blue, 0.2);
 	z-index: 200;
 	@include breakpoint(narrow-desktop) {
-		display: none; 
+		display: none;
 		// This obviously needs some more thought.
 		// Did this for quick test of layout on small device.
 	}
@@ -62,9 +62,9 @@ body {
 	}
 }
 
-.page, 
+.page,
 .page-links {
-	max-width: $horizontal-linelenght + ($horizontal-padding*2); 
+	max-width: $horizontal-linelenght + ($horizontal-padding*2);
 	padding: $vertical-margin $horizontal-padding;
 	margin: auto;
 	@include breakpoint(wide-desktop) {
@@ -108,5 +108,20 @@ body {
 	}
 	hr {
 		border-top-color: rgba($medium-gray,.8);
+	}
+}
+
+.swatches {
+	.swatch {
+		margin: 20px 0;
+	}
+	@media screen and ( min-width: 800px ) {
+		.swatch {
+			margin: 1%;
+		}
+		&.col-1 .swatch { width: 96%; }
+		&.col-2 .swatch { width: 48%; }
+		&.col-3 .swatch { width: 31.33%; }
+		&.col-4 .swatch { width: 23%; }
 	}
 }
