--- a/scss/atoms/colors/_colors.scss
+++ b/scss/atoms/colors/_colors.scss
@@ -4,24 +4,17 @@ $light-blue:             #78dcfa;
 $medium-blue:            #00aadc;
 $dark-blue:              #005082;
 
-// Primary Grays
-$ultra-light-gray:       #f4f8fA;
-$light-gray:             #e8f0f5;
-$medium-gray:            #d2dee6;
-$dark-gray:              #324155;
+// Grays
+$gray: #87a6bc;
 
-// Secondary Grays
-$ultra-light-light-gray: lighten($ultra-light-gray, 2%);
-$medium-gray-light:      lighten($medium-gray, 30%);
-$medium-gray-dark:       darken($medium-gray, 30%);
-$dark-gray-light:        lighten($dark-gray, 5%);
-$ultra-dark-gray: 	 	   rgb(30, 45, 65);
+// $gray functions
+// lighten: 10, 20, 30
+// darken: 10, 20, 30
 
-$medium-gray-darker:     darken($medium-gray, 10%);
-$medium-gray-darkerer:   darken($medium-gray, 20%);
+$gray-light: lighten($gray, 33%); //#f3f6f8
+$gray-dark: darken($gray, 38%); //#2e4453
 
-$groups-bg:              lighten($light-blue, 30%);
-$text-gray:              lighten($dark-gray, 10%);
+$text-gray:              $gray-dark;
 
 $white:                  #ffffff;
 
@@ -30,12 +23,26 @@ $fire-orange:            #d54e21;
 $jazzy-orange:           #f0821e;
 
 // Alerts
-$alert-yellow:           #f0b746;
-$alert-red:              #d9534f;
-$alert-green:            #4ab85e;
+$alert-yellow:           #f0b849;
+$alert-red:              #d94f4f;
+$alert-green:            #4ab866;
 
 // Link hovers
 $link-highlight:         tint($medium-blue, 20%);
 
 // Element highlight
 $element-highlight:		 lighten($fire-orange, 42%);
+
+// Depreciated Colors
+$ultra-light-gray:       #f4f8fA;
+$light-gray:             #e8f0f5;
+$medium-gray:            #d2dee6;
+$dark-gray:              #324155;
+$ultra-light-light-gray: lighten($ultra-light-gray, 2%);
+$medium-gray-light:      lighten($medium-gray, 30%);
+$medium-gray-dark:       darken($medium-gray, 30%);
+$dark-gray-light:        lighten($dark-gray, 5%);
+$ultra-dark-gray: 	 	   rgb(30, 45, 65);
+
+$medium-gray-darker:     darken($medium-gray, 10%);
+$medium-gray-darkerer:   darken($medium-gray, 20%);
