--- a/scss/atoms/colors/_colors.scss
+++ b/scss/atoms/colors/_colors.scss
@@ -31,7 +31,7 @@ $white:                  rgba(255,255,255,1);
 $transparent:            rgba(255,255,255,0);
 
 // Depreciated Colors
-$ultra-light-gray:       #f4f8fA;
+$ultra-light-gray:       #f4f8fa;
 $light-gray:             #e8f0f5;
 $medium-gray:            #d2dee6;
 $dark-gray:              #324155;
