--- a/scss/atoms/colors/_colors.scss
+++ b/scss/atoms/colors/_colors.scss
@@ -1,8 +1,8 @@
 // Blues
-$wordpress-blue:         #0085be;
-$light-blue:             #78dcfa;
-$medium-blue:            #00aadc;
-$dark-blue:              #005082;
+$blue-wordpress:         #0085be;
+$blue-light:             #78dcfa;
+$blue-medium:            #00aadc;
+$blue-dark:              #005082;
 
 // Grays
 $gray:                   #87a6bc;
@@ -22,8 +22,8 @@ $gray-light:             lighten( $gray, 33% ); //#f3f6f8
 $gray-dark:              darken( $gray, 38% ); //#2e4453
 
 // Oranges
-$fire-orange:            #d54e21;
-$jazzy-orange:           #f0821e;
+$orange-jazzy:           #d54e21;
+$orange-fire:            #f0821e;
 
 // Alerts
 $alert-yellow:           #f0b849;
@@ -34,7 +34,15 @@ $alert-green:            #4ab866;
 $white:                  rgba( 255,255,255,1 );
 $transparent:            rgba( 255,255,255,0 );
 
-// Depreciated Colors
+// Depreciated Colors and Variables
+$wordpress-blue:         #0085be;
+$light-blue:             #78dcfa;
+$medium-blue:            #00aadc;
+$dark-blue:              #005082;
+
+$fire-orange:            #f0821e;
+$jazzy-orange:           #d54e21;
+
 $ultra-light-gray:       #f4f8fa;
 $light-gray:             #e8f0f5;
 $medium-gray:            #d2dee6;
