--- a/scss/molecules/_wpcom-header.scss
+++ b/scss/molecules/_wpcom-header.scss
@@ -89,7 +89,7 @@
 						// Don't care for this hover
 						// Will change
 						color: #fff;
-						background: $light-blue;
+						background: $blue-light;
 					}
 				}
 			}
