--- a/scss/templates/_layout.scss
+++ b/scss/templates/_layout.scss
@@ -43,8 +43,8 @@ body {
 	padding-top: $header-height + 1.945em;
 	overflow: auto;
 	min-height: 100%;
-	background: $wordpress-blue;
-	box-shadow: inset -0.296em 0 0 rgba($dark-blue, 0.2);
+	background: $blue-wordpress;
+	box-shadow: inset -0.296em 0 0 rgba($blue-dark, 0.2);
 	z-index: 200;
 	@include breakpoint(narrow-desktop) {
 		display: none;
