--- a/scss/templates/_page-patterns.scss
+++ b/scss/templates/_page-patterns.scss
@@ -9,7 +9,7 @@
 
 	article {
 		background: #fff;
-		border: 2px solid rgba( $dark-blue, 0.4 );
+		border: 2px solid rgba( $blue-dark, 0.4 );
 	}
 
 	pre {
@@ -50,7 +50,7 @@
 		color: lighten( $dark-gray, 30% );
 	}
 	h4 a:hover {
-		color: $fire-orange;
+		color: $orange-fire;
 	}
 
 	p {
@@ -206,7 +206,7 @@ color: #0086B3;
 }
 
 pre .tag, pre .tag-name {
-color: $dark-blue;
+color: $blue-dark;
 font-weight: 600;
 }
 
@@ -220,7 +220,7 @@ color: $dark-gray;
 
 pre .constant.numeric, pre .keyword.unit, pre .hex-color {
 font-weight: normal;
-color: $medium-blue;
+color: $blue-medium;
 }
 
 pre .entity.class {
@@ -232,12 +232,12 @@ color: #900;
 }
 
 pre .attribute, pre .variable {
-color: $medium-blue;
+color: $blue-medium;
 }
 
 pre .string, pre .support.value  {
 font-weight: normal;
-color: $fire-orange;
+color: $orange-fire;
 }
 
 pre .regexp {
