Replacing all older instances of the variables

--- a/scss/atoms/_base.scss
+++ b/scss/atoms/_base.scss
@@ -7,11 +7,11 @@ button,
 input,
 select,
 textarea {
-	color: $text-gray;
+	color: $gray-dark;
 }
 html,
 body {
-	background: $ultra-light-gray;
+	background: $gray-light;
 }
 
 // (highlight color, text color)
