--- a/scss/templates/_page-colors.scss
+++ b/scss/templates/_page-colors.scss
@@ -61,7 +61,7 @@
 			display: block;
 			margin-bottom: 8px;
 			font-family: $sans;
-			color: $text-gray;
+			color: $gray-dark;
 		}
 		small {
 			font-size: 0.6rem;
