--- a/scss/organisms/_page-navigation.scss
+++ b/scss/organisms/_page-navigation.scss
@@ -5,7 +5,7 @@
 
 .page-links {
 	padding: 0;
-	border-top: 1px solid rgba($medium-gray,.5);
+	border-top: 1px solid rgba(lighten( $gray, 20% ),.5);
 	ul {
 		list-style: none;
 		margin: 0;
@@ -35,7 +35,7 @@
 					font-size: 0.618em;
 					text-transform: uppercase;
 					letter-spacing: .03em;
-					color: rgba($medium-gray-dark,.5);
+					color: rgba(darken( $gray, 10% ),.5);
 				}
 			}
 		}
