switching the oranges around

--- a/scss/atoms/colors/_colors.scss
+++ b/scss/atoms/colors/_colors.scss
@@ -22,8 +22,8 @@ $gray-light:             lighten( $gray, 33% ); //#f3f6f8
 $gray-dark:              darken( $gray, 38% ); //#2e4453
 
 // Oranges
-$orange-jazzy:           #d54e21;
-$orange-fire:            #f0821e;
+$orange-jazzy:           #f0821e;
+$orange-fire:            #d54e21;
 
 // Alerts
 $alert-yellow:           #f0b849;
